namespace ListasEnlazadas.Caja;

public record class Persona(string Nombre, int Edad);