namespace The_Witcher_3Genericos.Models;

public interface IEstiloMagico : IRolEstrategiaBrujo {
     void LanzarSeñal(string nombre);
}