namespace The_Witcher_3Genericos.Models;

public interface IRolEstrategiaBrujo {
    void PrepararInventario(string nombre);
}