namespace The_Witcher_3Genericos.Models;

public interface IEstiloEspada : IRolEstrategiaBrujo {
    public void AsestarGolpe(string nombre);
}