namespace The_Witcher_3.Model;

public interface IRolCombate {
    public void RealizarAccion();
}